docs: fix outdated informations